@@ -1,4 +1,5 @@
 ver 0.19.14 (not yet released)
+* fix build failures on non-glibc builds due to constexpr Mutex
 
 ver 0.19.13 (2016/02/23)
 * tags
